Adjusted path of scriptDirectory in config.json to not have trailing \\ Updated Create-ScheduledTask function in main script to generate the script file and create scheduled task correctly

--- a/config.json
+++ b/config.json
@@ -31,6 +31,6 @@
       "ScheduledScript": "Win11FeatureUpdateScheduledUpdate.ps1"
     }
   },
-  "ScriptDirectory": "C:\\temp\\",
+  "ScriptDirectory": "C:\\temp",
   "LogoFilePath": "C:\\temp\\ScriptLogo.png"
 }
